# AI-auto-short

./: .env.example  .gitignore  pyproject.toml
AndroidStudioProjects/AIMathTeacher2.0/android/app/: build.gradle.kts
AndroidStudioProjects/AIMathTeacher2.0/android/app/src/main/: AndroidManifest.xml
AndroidStudioProjects/AIMathTeacher2.0/android/app/src/main/java/com/example/a8_code_battle/: LoginActivity.kt
AndroidStudioProjects/AIMathTeacher2.0/scripts/: login_api_test.py
config/: settings.py
config/prompts/: fear.txt  greed.txt  trending.txt
src/: cli.py  pipeline.py
src/assets/: music.py  video_gen.py  voice.py
src/composer/: layout.py  renderer.py  text_effects.py
src/copywriter/: scene_parser.py  script_gen.py
src/models/: schema.py
src/transcriber/: downloader.py  summarizer.py  whisper.py
